# RaspberryPi4_Suite

./: README.md
Raspberry_Pi4_Server/: CMakeLists.txt  cleanup_script.sh  main.c
Raspberry_Pi4_Server/src/server/: CMakeLists.txt  client_queue.c  client_queue.h  rpi_server.c  rpi_server.h  thread_pool.c  thread_pool.h
