cmake_minimum_required(VERSION 3.15 FATAL_ERROR)
project(RaspberryPi4_Server VERSION 1.0.0  LANGUAGES C)
set(EXE_NAME ${PROJECT_NAME}_${PROJECT_VERSION})
set(CMAKE_BUILD_TYPE  DEBUG)
set(CMAKE_CURRENT_SOURCE_DIR  ${CMAKE_CURRENT_SOURCE_DIR}/src)
set(SERVER_SRC ${CMAKE_CURRENT_SOURCE_DIR}/server)
message(STATUS ${SERVER_SRC})
file(GLOB_RECURSE RPI_SRC "src/*.c")
file(GLOB_RECURSE RPI_HEADER "src/*.h")

set(RPI_INCLUDE_DIRS "")
foreach (_headerFile ${RPI_HEADER})
    get_filename_component(_dir ${_headerFile} PATH)
    list(APPEND RPI_INCLUDE_DIRS ${_dir})
endforeach ()
list(REMOVE_DUPLICATES RPI_INCLUDE_DIRS)
set(CMAKE_C_STANDARD 11)
set(THREADS_PREFER_PTHREAD_FLAG ON)
find_package(Threads REQUIRED)
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Werror -Wall -Wextra -lpthread --coverage")
if (${CMAKE_SYSTEM_PROCESSOR} MATCHES "aarch64" )
    message(STATUS ${CMAKE_SYSTEM_PROCESSOR})
    ADD_DEFINITIONS(-D_PI)

else()
    message(STATUS ${CMAKE_SYSTEM_PROCESSOR})
    ADD_DEFINITIONS(-D_VM)
endif ()
add_executable(${EXE_NAME} main.c ${RPI_SRC})
target_include_directories(${EXE_NAME} PRIVATE ${SERVER_SRC})
target_link_libraries(${EXE_NAME} PRIVATE ${server_lib} Threads::Threads)